fix: scrollbar fix hiddne

--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,15 @@ body {
     overflow: hidden;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
-div::-webkit-scrollbar, body::-webkit-scrollbar {
+/* div::-webkit-scrollbar, body::-webkit-scrollbar {
     display: none !important;
-}
+} */
 
 /* Hide scrollbar for IE, Edge and Firefox */
-div, body {
-    -ms-overflow-style: none !important;  /* IE and Edge */
-    scrollbar-width: none   !important;  /* Firefox */
-}
+/* div, body { */
+    /* -ms-overflow-style: none !important;  IE and Edge */
+    /* scrollbar-width: none   !important;  Firefox */
+/* } */
 
 * {
     outline: none;
